tests/NormalTests/paczka1/fuzzy1/43683310.err
Error in line 7: pBO S567 35,4
Error in line 13: 9AE18zk2P S436 293,9
Error in line 30: 9AE18zk2P A521 98,3
Error in line 32: JiIhUojD S567 27,4
Error in line 26: dHNwE S567 82,2
Error in line 33: JiIhUojD A521 79,5
Error in line 25: TjwYvQDvPV S436 5,9
